--- a/Debugging.Rmd
+++ b/Debugging.Rmd
@@ -1,12 +1,315 @@
 ---
 title: "Omega Update Debugging"
 output: html_notebook
+editor_options: 
+  chunk_output_type: inline
 ---
 
-Testing!
+## Overview:
+
+- Taking in omega_des with true u's
+- Updating fits from trees, but **not** updating $u$ or $Omega$
+  - Omega fixed at initialization
+
+## Setup:
+
+```{r, echo = FALSE}
+  source("D:/UT Austin/R Projects (D)/DR-BCF/gp_approx_fun.R")
+  setwd("D:/UT Austin/R Projects (D)/multibart-density-update")
+  devtools::load_all(".")
+  
+  library(ggplot2)
+  library(dplyr)
+  library(ggpubr)
+```
+## DGP
 
 ```{r}
-plot(cars, col = "red")
+  set.seed(2024)
+  n <- 500
+  u <- runif(n, -1, 1)
+  x0 <- round(rnorm(n, 0, 2), 0)
+  xnull <- rnorm(n, 0, 1)
+  a <- 1.5
+  sigma0 <- 0.1
+
+  ufun <- function(vec){
+    u = vec[1]
+    x = vec[2]
+    if(x < a){
+      b <- 2 / (1 + exp(-100*(u))) + 0.01
+      c <- 0#0.4 / (1 + exp(-15*(u-0.4))) + 0.01
+      return(1 * (b + c))
+    } else{
+      return(1)
+    }
+  }
+
+  data.frame(u = u,
+             ucurve = apply(cbind(u,x0), 1, ufun),
+             x0 = x0) %>%
+    ggplot() +
+    geom_point(aes(x = u, y = ucurve, color = factor(x0 < a)),
+               alpha = 0.5) +
+    ggtitle("Y curve as function of u, x0")
+
+  yfun <- function(vec){
+    u = vec[1]
+    x = vec[2]
+    p <- ufun(vec)
+    yout = p
+    return(yout)
+    #return(p)
+  }
+
+p1_y <- ggplot(data.frame(x0 = x0, y = apply(cbind(u,x0), 1, yfun))) +
+    geom_histogram(aes(x = y, fill = factor(x0 < a)), 
+                   position = "identity", alpha = 0.8) +
+    ggtitle("Y by X0, without noise")
+  sd(apply(cbind(u,x0), 1, yfun))
+
+  y <- apply(cbind(u,x0),1, yfun) + rnorm(n, 0, sigma0)
+  x <- cbind(x0,u)
+  yobs_range = c(min(y), max(y))
+  
+p2_y <- ggplot(data.frame(x0 = x0, y = y)) +
+    geom_histogram(aes(x = y, fill = factor(x0 < a)), 
+                   position = "identity", alpha = 0.8) +
+    ggtitle("Y by X0, including noise from sigma0")
+  sd(y)
+  
+  ggarrange(p1_y, p2_y, nrow = 2)
 ```
 
-Initial commit
+True density of y above and below threshold:
+
+```{r}
+xx = 2
+  ## True density in blue:
+  ns <- 100000
+  us <- runif(ns, min = -1, max = 1)
+  ys <- apply(cbind(us,xx), 1, yfun) +
+    rnorm(ns, mean = 0, sd = sigma0)
+  den <- density(ys)
+
+p1_xx0 <- data.frame(y_ = den$y,
+             dens = den$x) %>%
+    ggplot(aes(y = y_, x = dens)) +
+    geom_line() +
+  ggtitle(paste0("True y density, x0 = ", xx)) +
+  expand_limits(x = c(-2,4))
+  
+xx = 0
+  ## True density in blue:
+  ns <- 100000
+  us <- runif(ns, min = -1, max = 1)
+  ys <- apply(cbind(us,xx), 1, yfun) +
+    rnorm(ns, mean = 0, sd = sigma0)
+  den <- density(ys)
+
+p2_xx0 <- data.frame(y_ = den$y,
+             dens = den$x) %>%
+    ggplot(aes(y = y_, x = dens)) +
+    geom_line() +
+  ggtitle(paste0("True y density, x0 = ", xx)) +
+  expand_limits(x = c(-2,4))
+
+ggarrange(p1_xx0, p2_xx0, nrow = 2)
+```
+
+## Initialize omega, multibart function
+
+```{r}
+  L = 5/2
+  ustar = runif(n, -1, 1)
+
+  j_con <- 12 # basis dim of approx
+  l_con <- 4/(1*pi)
+
+  sig <- 1 # the scale is handled separately
+
+  #Build the matrices
+  scales = sqrt(SDiag(sig, l_con, j_con, L))
+
+  #omega <- Omega(ustar, j_con, L)
+  omega <- Omega(u, j_con, L) # USING TRUE U
+  # Hit with root eigenvalues
+  omega_des <- omega %*% scales
+  
+  (u[1:4])
+  (omega_des[1:4,1:4])
+```
+```{r}
+ X_list = list(multibart:::mb_modelmatrix(matrix(x0, nrow=n)),
+                multibart:::mb_modelmatrix(matrix(x0, nrow=n)))
+
+  basis_matrix_list = list(omega_des, matrix(rep(1,n),nrow=n)) # initialize at constant u
+
+  designs = multibart:::make_bart_designs(X_list, basis_matrix_list)
+
+  ntree_f = 100
+  ntree_m = 100
+  sd_f = 2*sd(y)
+  sd_m = sd_f
+
+  specs = list(multibart:::make_bart_spec(designs[[1]], ntree_f,
+                                          ((sd_f)^2)/ntree_f * diag(rep(1, ncol(omega_des))),
+                                          scale_df = 3, vanilla=FALSE, update_leaf_scale=FALSE),
+               multibart:::make_bart_spec(designs[[2]], ntree_m,
+                                          matrix(((sd_m)^2)/ntree_m),
+                                          scale_df = 3, vanilla=TRUE, update_leaf_scale=FALSE))
+
+  sigq = 0.9
+  nu = 3
+  lmf = lm(y~x0)
+  sighat = summary(lmf)$sigma
+  qchi = qchisq(1.0-sigq,nu)
+  lambda = (sighat*sighat*qchi)/nu
+
+  nd = 2000
+  nburn = 2000
+  thin = 1
+  set.seed(2023)
+```
+
+```{r}
+  mbf = multibart:::multibart(y_=y,
+                              bart_specs=specs,
+                              bart_designs=designs,
+                              random_des = matrix(1),
+                              random_var = matrix(1),
+                              randeff_scales = matrix(1),
+                              random_var_ix =  matrix(1),
+                              random_var_df = 3,
+                              burn = nburn, nd = nd, thin = thin,
+                              lambda = lambda, nu = nu,
+                              status_interval = 100,
+                              basis_params = c(j_con, L, l_con),
+                              text_trace = TRUE,
+                              R_trace = FALSE,
+                              ugrid_ = u)
+```
+
+```{r}
+  data.frame(y_post = colMeans(mbf$yhat_post),
+             y_true = y,
+             x = x) %>%
+    ggplot(aes(x = y_post, y = y_true, color = factor(x0 < a))) +
+    geom_point() +
+    geom_abline(intercept = 0, slope = 1)
+
+  plot(mbf$sigma, type = "l")
+```
+
+## Results:
+
+Plotting True vs Estimated Density:
+
+```{r}
+xx <- 1
+
+  for(xx in c(1,2)){
+
+  ugrid_length <- 200
+  ugrid <- seq(-1, 1, length.out = ugrid_length)
+  omega <- Omega(ugrid, j_con, L)
+  scales = sqrt(SDiag(sig, l_con, j_con, L))
+  omega_plot_grid <- omega %*% scales
+
+  onen  = rep(1, nrow(matrix(xx)))
+  # extract fits from each tree for x = xx
+  f_fit = list(tree_samples = mbf$tree_trace[[1]],
+               str = mbf$tree_trace[[1]]$save_string(),
+               scale=1, shift = 0)
+  int_fit = list(tree_samples = mbf$tree_trace[[2]],
+                 str = mbf$tree_trace[[2]]$save_string(),
+                 scale=1, shift = 0)
+  f = get_forest_fit(f_fit, matrix(xx))#matrix(rep(xx,ugrid_length)), omega_plot_grid[])
+  int = get_forest_fit(int_fit, matrix(xx))
+  sigma_post = mbf$sigma
+
+  ygrid_length <- 1001
+  ygrid <- seq(-10,10,length.out = ygrid_length)
+
+  ydensfun <- function(b, f, int, sigma_post){
+    mu_res <- rep(NA, ugrid_length)
+    for(k in 1:ugrid_length){
+      mu_res[k] <- omega_plot_grid[k,] %*% f[,,b] #f[b,k]
+    }
+    #mu <- mbf$ugrid_mu_trace[b,] + int[1,b]
+    mu <- mu_res + int[1,b]
+    #hist(mu)
+
+    yres <- rep(NA, ygrid_length)
+    for(yy in 1:ygrid_length){
+      yres[yy] <- mean(dnorm(ygrid[yy], mean = mu, sd = sigma_post[b]))
+    }
+    return(yres)
+  }
+  
+  ## True density in blue:
+  ns <- 10000
+  us <- runif(ns, min = -1, max = 1)
+  ys <- apply(cbind(us,xx), 1, yfun) +
+    rnorm(ns, mean = 0, sd = sigma0)
+  den <- density(ys)
+
+  bseq <- 1:(nd)
+  #bseq <- (nd-20):(nd-15)#(nd-5):nd
+  ydensobs <- sapply(bseq, ydensfun, f = f, int = int, sigma_post = sigma_post)
+
+  p <- data.frame(y = c(rowMeans(ydensobs), den$y),
+             dens = c(ygrid, den$x),
+             lab = c(rep("Predicted", ygrid_length),
+                     rep("True", length(den$x)))) %>%
+    ggplot() +
+    geom_ribbon(data = data.frame(dens95 = apply(ydensobs, 1, quantile, 0.95),
+                                  dens05 = apply(ydensobs, 1, quantile, 0.05),
+                                  y = ygrid),
+                aes(ymin = dens05, ymax = dens95, x = y), alpha = 0.3,
+                fill = "firebrick") +
+    #geom_histogram(data = data.frame(yobs = c(colMeans(mbf$yhat_post[bseq,x0==xx]),
+    #                                          y[x0==xx]),
+    #                                 xobs = c(x0[x0==xx],
+    #                                          x0[x0==xx]),
+    #                                 type = c(rep("Predicted Y", sum(x0==xx)),
+    #                                          rep("True Y", sum(x0==xx)))),
+    #               aes(x = yobs, y = after_stat(density), fill = factor(type)),
+    #               alpha = 0.3, position = "identity") +
+    geom_line(aes(x = dens, y = y, color = lab), lwd = 1) +
+    scale_fill_brewer(palette = "Set1") +
+    scale_color_brewer(palette = "Set1")  +
+    ggtitle(paste0("Conditional density given xx = ",xx))
+  print(p)
+  }
+```
+
+```{r}
+xx <- 0
+
+  f_fit = list(tree_samples = mbf$tree_trace[[1]],
+               str = mbf$tree_trace[[1]]$save_string(),
+               scale=1, shift = 0)
+  f = get_forest_fit(f_fit, matrix(xx))#matrix(rep(xx,ugrid_length)), omega_plot_grid[])
+
+plot(ugrid, omega_plot_grid[] %*% f[,,nd])
+par(mfrow = c(2,3))
+for(b in sample(1:nd, 6)){
+  plot(ugrid, omega_plot_grid[] %*% f[,,b])
+}
+```
+```{r}
+xx <- 2
+
+  f_fit = list(tree_samples = mbf$tree_trace[[1]],
+               str = mbf$tree_trace[[1]]$save_string(),
+               scale=1, shift = 0)
+  f = get_forest_fit(f_fit, matrix(xx))#matrix(rep(xx,ugrid_length)), omega_plot_grid[])
+
+plot(ugrid, omega_plot_grid[] %*% f[,,nd])
+par(mfrow = c(2,3))
+for(b in sample(1:nd, 6)){
+  plot(ugrid, omega_plot_grid[] %*% f[,,b])
+}
+```
+
