--- a/Debugging.Rmd
+++ b/Debugging.Rmd
@@ -12,7 +12,7 @@ editor_options:
 
 - Taking in omega_des with true u's
 - Updating omega and u
-- **Fixing sigma = 0.1**
+- **Changed multibart to sample weights using std::discrete_distribution**
 
 ## Setup:
 
@@ -171,9 +171,9 @@ ggarrange(p1_xx0, p2_xx0, nrow = 2)
   qchi = qchisq(1.0-sigq,nu)
   lambda = (sighat*sighat*qchi)/nu
 
-  nd = 5000
-  nburn = 10000
-  thin = 2
+  nd = 1000
+  nburn = 1000
+  thin = 1
   set.seed(2023)
 ```
 
